component/sl_candidate/resources/css/sl_candidate.css
/* ... */
ul.contactList li:nth-child(odd){ background-color: #f4f4f4; }
ul.contactList li.floatHack{ height: 0px; border: 0; padding: 0; }


ul.contactList li div.contactIcon{ width: 7%; float: right; height: 32px;}

/* when tabs are on top, icon on the left, else on the right */
.candiHoriSizeTabs ul.contactList li div.contactIcon,
.candiHoriHalfSizeTabs ul.contactList li div.contactIcon{float: left; margin-left: 5px;}

.contact_type1 {background: transparent url('/component/sl_candidate/resources/pictures/types/phone_home.png') no-repeat top left; }
.contact_type2 {background: transparent url('/component/sl_candidate/resources/pictures/types/phone_work.png') no-repeat top left; }
.contact_type3 {background: transparent url('/component/sl_candidate/resources/pictures/types/web.png') no-repeat top left; }
.contact_type4 {background: transparent url('/component/sl_candidate/resources/pictures/types/fax.png') no-repeat top left; }
.contact_type5 {background: transparent url('/component/sl_candidate/resources/pictures/types/email.png') no-repeat top left; }
.contact_type6 {background: transparent url('/component/sl_candidate/resources/pictures/types/phone_mobile.png') no-repeat top left; }
.contact_type7 {background: transparent url('/component/sl_candidate/resources/pictures/types/facebook.png') no-repeat top left; }
.contact_type8 {background: transparent url('/component/sl_candidate/resources/pictures/types/linkedin.png') no-repeat top left; }
.contact_type9 {background: transparent url('/component/sl_candidate/resources/pictures/types/info.png') no-repeat top left; }

ul.contactList li div.contactData{ width: 63%; float: left; height: 16px; overflow: hidden;}
ul.contactList li div.contactDescription{ width: 63%; float: left; min-height: 16px;}
ul.contactList li div.contactDate{ width: 28%; float: right; height: 32px;}
.contact_masked{ color: #2A6991; font-style: italic;}
.contact_masked_symbol
{
  font-size: 9px;
  color: #2A6991; font-style: italic;
}




.candi_grade_2
{
  background: transparent url('/common/pictures/slistem/candi_grade_low_16.png') no-repeat top center;
}
.candi_grade_3
{
  background: transparent url('/common/pictures/slistem/candi_grade_high_16.png') no-repeat top center;
}
.candi_grade_4
{
  background: transparent url('/common/pictures/slistem/candi_grade_top_16.png') no-repeat top center;
}

.list_note_title
{
  color: #555;
  padding-bottom: 3px;
  margin-bottom: 20px;
  border-bottom: 1px solid #dedede;
}
.list_note_title > span
{
  color: #666;
  font-weight: bold;
}


/******************************************************************/
/* list css */
/******************************************************************/

.tplCandiRow:hover
{
  /*background-color: #FFF1C9;*/
  background: linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0)) repeat scroll 0 0 / 10px 10px #fff1c9;
}

div.tplListContainer ul li.listRowSelected
{
    background-color: #F9E3B3;
    background: linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0)) repeat scroll 0 0 / 10px 10px #F9E3B3;
}

li.tplListRowContainer div.tplListRow div.tplCandiRow_small,
li.tplListRowContainer div.tplListRow div.tplCandiRow_small label
{
  font-size: 10px;
  margin: 0;
}

li.tplListRowContainer div.tplListRow div.tplCandiRow_continuous
{
  border-right-color: transparent;
}


/* *************************** */
ul li.tplListHeaderContainer
{
  min-height:40px;
  max-height:65px;
  height: auto;
}
.list_action_container
{
  background-color: #EFF3F7;
  float: left;
  height: 20px;
  padding-top: 5px;
  width: 100%;
  border-bottom: 1px solid #666;
}

.list_action_container > div > div
{
  float: left;
  width: 30%;
  margin: 0 10px 0 0;
  height: 25px;
}
div.list_action_container > div > div:first-child
{
  width: 6%;
}
/* **************************** */



.tplCandi_client
{
  background: transparent url('/common/pictures/slistem/candi_client_16.png') no-repeat center 5px;
}

.tplCandi_status_play
{
  background: transparent url('/component/sl_candidate/resources/pictures/status/status_play.png') no-repeat center 0;
  display: inline-block;
  width: 16px;
  height: 18px;
  position: absolute;
  right: 2px;
  top: 5px;
}

.tplListRowContainer div.tplListRow > div.tplCandi_status
{
  background: transparent url('/component/sl_candidate/resources/pictures/status/status.jpg') no-repeat center 5px;
  color: #fff;
  text-align: center;
  font-size: 10px;
  line-height: 15px;
}
.tplListRowContainer div.tplListRow > div.tplCandi_status_50 { background: transparent url('/component/sl_candidate/resources/pictures/status/status_50.jpg') no-repeat center 5px; }
.tplListRowContainer div.tplListRow > div.tplCandi_status_100{ background: transparent url('/component/sl_candidate/resources/pictures/status/status_offer.jpg') no-repeat center 5px; }
.tplListRowContainer div.tplListRow > div.tplCandi_status_151{ background: transparent url('/component/sl_candidate/resources/pictures/status/status_expired.jpg') no-repeat center 5px;}
.tplListRowContainer div.tplListRow > div.tplCandi_status_inactive{ background: transparent url('/component/sl_candidate/resources/pictures/status/status_inactive.jpg') no-repeat center 5px; }

.tplCandi_status_active  { background: transparent url('/component/sl_candidate/resources/pictures/status/list_active.png') no-repeat center 5px;}
.tplCandi_status_placed  { background: transparent url('/component/sl_candidate/resources/pictures/status/list_placed.png') no-repeat center 5px;}
.tplCandi_status_inactive{ background: transparent url('/component/sl_candidate/resources/pictures/status/list_inactive.png') no-repeat center 5px; }
/* ... */

